package base;

public class KitchenMachine {
    public KitchenMachine(String name) {
        this.name = name;
    }

    public String getName() { return name; }

    private final String name;
}
