package base;

public class Settings {
    public final static long TICK_TIME = 300; // 5 minutes
    public final static long CLOSING_TIME = 21600; // 6 hours

    public final static long VISITOR_GENERATE_TIME_PERIOD = 900; // 15 minutes
    public static final long VISITOR_WAITING_TIME = 3000; // 30 minutes
}
