package base;

enum VisitorRequestStatus {
    SUCCESS,
    NEED_PREPARE,
    PRODUCT_MISSING
}
